app/globals.css
:root {
	--dark-background: #1F2428;
	--normal-background: #24292E;
	--border: #373737;
	--orange: #F9826C;
}

body {
	margin: 0;
	height: 100vh;
	min-height: 100vh;
	display: flex;
	flex-direction: column;
	font-family: JetBrains Mono;
	color: white;
}

.hidden {
	display: none;
}

.top-bar {
	min-height: 30px;
	background-color: var(--dark-background);
	border-bottom: solid 1px var(--border);
}

.big {
	flex-grow: 1;
	display: flex;
	flex-direction: row;
	overflow-y: auto;
}

.left-bar {
	flex-grow: 0;
	min-width: 50px;
	background-color: var(--normal-background);
}

.file-bar {
	width: 350px;
	box-sizing: border-box;
	min-width: 300px;
	background-color: var(--dark-background);
	border-right: solid 1px var(--border);
	border-left: solid 1px var(--border);
}

.almost-top-bar {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	background-color: var(--dark-background);
}

#close-all-button {
	padding: 10px 20px;
}

.big-2 {
	flex-grow: 1;
	display: flex;
	flex-direction: column;
	overflow-y: auto;
}

.tabs-bar {
	height: 50px;
	background-color: var(--dark-background);
	flex-grow: 0;
	flex-shrink: 1;
	display: flex;
	flex-direction: row;
}

.main {
	background-color: var(--dark-background);
	flex-grow: 1;
	overflow-y: hidden;
}

.left-bar ul {
	margin-top: 12px;
	padding: 0 0;
	list-style: none;
	text-align: center;
}

.left-bar li {
	margin: 16px 0;
}


button,
input[type="submit"],
input[type="reset"] {
	background: none;
	color: inherit;
	border: none;
	padding: 0;
	font: inherit;
	cursor: pointer;
	outline: inherit;
}

.file-bar h2 {
	margin: 0;
	font-size: 16px;
	margin-left: 4px;
	font-weight: 400;
}

.file-bar .top {
	display: flex;
	flex-direction: row;
	height: 40px;
	align-items: center;
	text-align: center;
	padding: 0 12px;
	padding-top: 12px;
}


.main {
	flex-grow: 1;
}

.content {
	max-width: 1400px;
	max-height: 100%;
	padding: 40px;
}

.content-wrapper {
	height: 100%;
	background-color: var(--normal-background);
	overflow: scroll;
}

.content h1 {
	margin-top: 0;
}

.content img {
	width: 1000px;
	max-width: 100%;
	margin: 16px 0;
}

a {
	color: white;
}

@media (max-width: 1200px) {
	.left-bar {
		display: none;
	}
}

@media (min-width: 1106px) {
	#close-all-button {
		display: none;
	}
}

@media (max-width: 1106px) {
	.file-bar {
		display: none;
	}

	#x-button {
		display: none;
	}

	.top-bar {
		display: none;
	}
}

@media (max-width: 850px) {
	.file-bar {
		display: block;
		width: 100%;
		padding-bottom: 20px;
	}

	.tabs-bar {
		display: none;
	}

	.big {
		display: flex;
		flex-direction: column;
	}

	.main {
		display: flex;
		flex-direction: column;
	}

	body {
		overflow-x: hidden;
	}

	.content-wrapper {
		flex-grow: 100;
		;
	}

	#close-all-button {
		display: none;
	}

	.home-file {
		display: block !important;
	}

	/* .content-wrapper { */
	/* 	overflow: visible; */
	/* } */

	.content,
	.content-wrapper,
	.main,
	.big-2,
	.big,
	body {
		max-height: 10000000%;
	}

	body {
		height: auto;
	}

}

@media (max-width: 600px) {
	.content {
		padding: 20px;
	}
}

.start-page {
	height: 100%;
	padding: 80px;
	box-sizing: border-box;
	display: flex;
	flex-direction: column;
	justify-content: center;
}

.start-page h1 {
	font-size: 200px;
	/* top: 50%; */
	/* transform: translate(0, -50%); */
	/* position: absolute; */
	font-weight: 800;
	color: #44494E;
	line-height: 1.1em;
	margin: 0;
	z-index: 1;
}

.start-page h2 {
	margin-top: 10px;
	margin-bottom: 40px;
	margin-left: 8px;
	font-size: 100px;
	/* margin-left: 80px; */
	z-index: 2;
}

.volleyball {
	position: absolute;
	opacity: 50%;
	z-index: 0;
	right: 100px;
}

.start-page a {
	margin: 12px;
	background: white;
	color: black;
	text-decoration: none;
	padding: 20px;
}

.start-page .container {
	display: flex;
	flex-direction: row;
	z-index: 2;
	margin-bottom: 100px;
}

a:hover {
	cursor: pointer;
}

@media (max-width:2000px) {
	.volleyball {
		width: 800px;
	}

	.start-page h1 {
		font-size: 160px;
	}

	.start-page h2 {
		font-size: 80px;
	}

}

@media(max-width:1700px) {
	.volleyball {
		display: none;
	}
}

@media(max-width:1530px) {
	.start-page h1 {
		font-size: 120px
	}

	.start-page h2 {
		font-size: 60px;
	}
}

@media(max-width:800px) {
	.start-page {
		padding: 30px;
	}

	.start-page h1 {
		font-size: 80px;
	}

	.start-page h2 {
		font-size: 40px;
	}

	.start-page .container {
		flex-direction: column;
	}

	.start-page .second-two {
		margin-top: 60px;
	}
}

@media(max-width:500px) {
	.start-page {
		padding: 20px;
	}

	.start-page h1 {
		font-size: 60px;
	}

	.start-page h2 {
		font-size: 30px;
	}

	a {
		white-space: nowrap;
	}


	.content a {
		text-wrap: wrap;
	}

}

.home-file {
	display: none;
}

